--- a/app/core/layout.pug
+++ b/app/core/layout.pug
@@ -5,4 +5,4 @@
       i.fa.fa-calendar-plus-o(aria-hidden="true")
       span #{' '}Add event to the calendar
   .row#content
-    calendar
+    ng-view
