--- a/app/core/layout.pug
+++ b/app/core/layout.pug
@@ -1,7 +1,7 @@
 .container-fluid
   .row#header
     h1 CA485 - Assignment
-    button.btn.btn-success#eventAdd(ng-click="vm.showAddEventDialog()")
+    a.btn.btn-success#eventAdd(href="#/event-create")
       i.fa.fa-calendar-plus-o(aria-hidden="true")
       span #{' '}Add event to the calendar
   .row#content
