--- a/app/components/event-create.pug
+++ b/app/components/event-create.pug
@@ -1,3 +1,28 @@
 h2 Create new event
-
-h3 TODO
+.row
+  .col-xs-10.col-lg-4
+    form(role="form")
+      .form-group
+        label(for="name") Name:
+        input#name.form-control(type="text" required ng-model="vm.name")
+      .form-group
+        label(for="start") Start date:
+        .input-group.date(data-provide="datepicker")
+          input#date.form-control(type="text" required ng-model="vm.start")
+          .input-group-addon
+            i.fa.fa-calendar(aria-hidden="true")
+      .form-group
+        label(for="end") End date:
+        .input-group.date(data-provide="datepicker")
+          input#end.form-control(type="text" required ng-model="vm.end")
+          .input-group-addon
+            i.fa.fa-calendar(aria-hidden="true")
+      .form-group
+        label(for="slots") Number of slots:
+        input#slots.form-control(type="number" required ng-model="vm.slots")
+      .form-group
+        label(for="slots") Duration (minutes):
+        input#slots.form-control(type="number" required ng-model="vm.duration")
+      button.btn.btn-primary(type="submit") Create
+      a.btn.btn-default(href="#/calendar")
+        span #{' '} Back
