fix back button

--- a/app/components/event-create.pug
+++ b/app/components/event-create.pug
@@ -28,4 +28,4 @@ h2 Create new event
           type="number" min="0" required ng-model="vm.duration"
         )
       button.btn.btn-primary(type="submit") Create
-      button.btn.btn-default(href="#/calendar") Back
+      a.btn.btn-default(href="#/calendar") Back
