--- a/app/index.pug
+++ b/app/index.pug
@@ -6,6 +6,7 @@ html(lang="en")
     title ES6 + JSPM + Gulp
     link(rel="stylesheet" href="all.css" charset="utf-8")
   body
+    script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js")
     if NODE_ENV == 'development'
       script(src="jspm_packages/system.js")
       script(src="jspm.conf.js")
