--- a/app/app.scss
+++ b/app/app.scss
@@ -2,7 +2,7 @@ $fa-font-path: jspm_resolve("font-awesome/fonts/");
 @import "jspm:font-awesome/scss/font-awesome";
 @import "jspm:bootstrap/css/bootstrap";
 @import "jspm:fullcalendar/dist/fullcalendar";
-@import "jspm:bootstrap-datepicker/css/bootstrap-datepicker3.standalone";
+@import "jspm:bootstrap-datetimepicker/build/css/bootstrap-datetimepicker";
 
 $color-primary: #375684;
 
@@ -44,4 +44,8 @@ body
   {
     margin: 10px;
   }
+}
+
+.fc-day-grid-event .fc-content {
+  height: 25px;
 }
