--- a/app/index.pug
+++ b/app/index.pug
@@ -3,7 +3,7 @@ html(lang="en")
   head
     base(href="/")
     meta(charset="UTF-8")
-    title ES6 + JSPM + Gulp
+    title CA485
     link(rel="stylesheet" href="all.css" charset="utf-8")
   body
     script(src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.13.0/moment.min.js")
